2010-04-09  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-05
	* improve etarsp and phirsp definitions (Andreas)
	* fixes to track reconstruction sequence (Andreas)
	* fix jet_apply_jec_x tool to work (well, compile) with
	CondFormats/JetMETObjects V02-00-05-03. Still not in default build
	sequence

2010-04-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-04
	* fix JPT reconstruction sequence
	* set jet_response_analyzer_x option 'nbinsabsrsp' to 0, which
	means that by default absolute response histograms will not be
	created

2010-04-01  Andreas Hinzmann  <hinzmann@cern.ch>

	* add trackjet reconstruction sequence
	* adapt L2 and L3 correctors for trackjets

2010-03-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-03
	* fix jet_l2_correction_x tool (finally!), according to Kostas'
	instructions (thanks to Andreas for pointing out that it was still
	wrong). 

	* tag V00-08-02
	* add tree branch 'refrank'
	* add tree branch 'refy' (reference rapidity)
	* add tree branch 'jty' (jet rapidity)
	* yet to be accounted for in e.g. jet_response_analyzer_x tool!
	
2010-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* add JPT L2L3 corrections

2010-03-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* compatible with CMSSW_3_5_4 (->TFileService)
	* transition from absolute to relative response for
	jet_l3_correction_x tool, jet_l2_correction_x toll still pending

2010-02-17  Konstantinos Kousouris  <Konstantinos.Kousouris@cern.ch>

        * tag V00-07-06
        * compatible with CMSSW_3_5_0
        * jet_l3_correction_x: response is now calculated from the ratio ptCalo/ptGen
        * jet_l2_correction_x: response is now calculated from the ratio ptCalo/ptGen
        * jet_response_fitter_x: implemented the low pt bias modification
2009-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-03